--- a/AccountBook/AccountBook.csproj
+++ b/AccountBook/AccountBook.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\SqlDbHelper.cs" />
+    <Compile Include="Helper\Tool.cs" />
     <Compile Include="Model\Account.cs" />
     <Compile Include="Model\Detial.cs" />
     <Compile Include="Model\Type.cs" />
